# modern-python

./: .buildinfo  .flake8  .pre-commit-config.yaml  README.md  genindex.html  index.html  license.html  noxfile.py  objects.inv  py-modindex.html  pyproject.toml  reference.html  search.html  searchindex.js  setup.cfg
.doctrees/: environment.pickle  index.doctree  license.doctree  reference.doctree
.github/workflows/: coverage.yml  gh-pages.yml  release.yml  test-pypi.yml  tests.yml
_sources/: index.rst.txt  reference.rst.txt
docs/: conf.py  index.rst  requirements.txt
src/modern_python/: __init__.py  console.py  wikipedia.py
tests/: __init__.py  conftest.py  test_console.py
tests/modern_python/: conftest.py  test_console.py  test_wikipedia.py
