[tool.poetry]
name = "modern-python"
version = "0.1.0"
license = "MIT"
readme = "README.md"
description = "现代化的python项目模版"
homepage = "https://github.com/liuxd2018/modern-python"
repository = "https://github.com/liuxd2018/modern-python"
authors = ["Liu Xiaodong <liuxd2018@foxmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
click = "^7.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
