[tool.poetry]
name = "modern-python"
version = "0.1.0"
license = "MIT"
readme = "README.md"
description = "现代化的python项目模版"
homepage = "https://github.com/liuxd2018/modern-python"
repository = "https://github.com/liuxd2018/modern-python"
authors = ["Liu Xiaodong <liuxd2018@foxmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
click = "^7.1.2"
requests = "^2.24.0"

[tool.poetry.dev-dependencies]
pytest = "^6.1.2"
coverage = {extras = ["toml"], version = "^5.3"}
pytest-cov = "^2.10.1"
pytest-mock = "^3.3.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
modern-python = "modern_python.console:main"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["modern_python"]

[tool.coverage.report]
show_missing = true
fail_under = 100
